# casb_gitlab_automation_backup

./: MIGRATION.md  Readme.md  build.bat  build.sh  capture_har_json_and_html_for_each_navigation_and_update_activities.py  casb-automation.spec  casb_run.py  casb_server_start.bat  config.py  debug_casb_block_alert_popup_finder.py  get_casb_apps_activities.sh  pyproject.toml  requirements.txt  run.py  setup_git.bat  setup_venv.bat  setup_venv.sh
apps/instagram/: __init__.py  activities.py  activity_common.py  activity_delete.py  activity_edit.py  activity_like.py  activity_logout.py  activity_post.py  activity_share.py  activity_upload.py  app.yaml  login_handler.py  navigations.py  ui_validators.py
apps/ms_teams_corporate/: activities.py  activity_post.py  app.yaml  login_handler.py
apps/ms_teams_personal/: activity_post.py  app.yaml  login_handler.py
casb_server/: README.md  app.py  install_service.bat  requirements.txt  run_server.py  uninstall_service.bat
casb_server/templates/: base.html  index.html  run_detail.html  upload.html
casb_updates/: casb_server_start.bat
casb_updates/core/: base_activity.py
core/: base_activity.py  browser_handler.py  decryption_check.py  lef_verifier.py  report_generator.py  runner.py  session_verifier.py  versa_handler.py  vos_info_dump.py  vos_stats_verifier.py
